<resources>
    <string name="app_name">Cicerone</string>
    <string name="immaginesplash">imageSplash</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_password">MainActivity</string>
    <string name="title_activity_registration">MainActivity</string>
    <string name="welcome">Welcome to Cicerone!</string>

    <!-- login and registration activity-->
    <string name="etUsername">Username</string>
    <string name="etName">Username</string>
    <string name="etUserEmail">E-MAIL</string>
    <string name="etUserPassword">PASSWORD</string>
    <string name="registrazione">SIGN UP</string>
    <string name="btnRegister">Create new account</string>
    <string name="Welcome">Welcome back!</string>
    <string name="Welcome2">Let\'s get started!</string>
    <string name="tvUserLogin">Login</string>
    <string name="Register">Aren\'t you registered?</string>
    <string name="CompleteRegistration">  Complete your registration  </string>
    <string name="Login">Are you registered yet?</string>
    <string name="Register2">Sign up now</string>
    <string name="Messaggio">By clicking "Create New Account", it will send you a verification email</string>
    <string name="Toast1">Enter email!</string>
    <string name="Toast2">Enter password!</string>
    <string name="errorName">Enter Your Name!</string>
    <string name="errorSurname">Enter Your Surname!</string>
    <string name="TstPassShort">Password is too short(at least 6 characters)</string>
    <string name="Authenticationf">Authentication failed</string>
    <string name="Successful">Login successful</string>
    <string name="NotVerified">Email is not verified yet</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Description">Enter your registration email and we will send you a link in order to reset your password</string>
    <string name="Emailsent">Email sent</string>
    <string name="EmailNotRegistered">This email is not registered</string>
    <string name="NotifyApproved">Your account has been approved</string>
    <string name="Failure">Registration not successful</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="add_event">Add Event</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="create_a_new_activity">Create new Event</string>
    <string name="activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity">Activity</string>
    <string name="title_create_activity">Create Activity</string>
    <string name="title_search">Search activity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_activity">My Event</string>
    <string name="are_you_ready">Are you ready?</string>

    <!--Profile -->
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="Auth_Failed">authentication failed</string>


</resources>
